<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>glim</name>
  <version>1.2.2</version>
  <description>3D LiDAR-IMU mapping framework</description>
  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>
  <license>MIT</license>

  <depend>fmt</depend>
  <depend>spdlog</depend>

  <!-- Required by the ROS2-only modules (imu_prediction, external odometry) -->
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">sensor_msgs</depend>
  <depend condition="$ROS_VERSION == 2">nav_msgs</depend>
  <depend condition="$ROS_VERSION == 2">geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 2">tf2</depend>
  <depend condition="$ROS_VERSION == 2">tf2_ros</depend>
  <depend condition="$ROS_VERSION == 2">tf2_eigen</depend>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
